# Torch-TensorRT

./: .gitignore  BUILD  BUILD.bazel  CMakeLists.txt  WORKSPACE
cmake/: utils.cmake
core/: BUILD  CMakeLists.txt  compiler.cpp  compiler.h
core/conversion/: CMakeLists.txt  conversion.cpp
core/conversion/conversionctx/: CMakeLists.txt  ConversionCtx.cpp
core/conversion/converters/: CMakeLists.txt  converter_util.cpp  converter_util.h
core/conversion/converters/impl/: element_wise.cpp
core/conversion/evaluators/: CMakeLists.txt
core/conversion/tensorcontainer/: CMakeLists.txt  TensorContainer.cpp
core/conversion/var/: CMakeLists.txt
core/ir/: BUILD  CMakeLists.txt  ir.h
core/lowering/: CMakeLists.txt  lowering.cpp  lowering.h  register_trt_placeholder_ops.cpp
core/lowering/passes/: CMakeLists.txt
core/partitioning/: CMakeLists.txt  shape_analysis.cpp
core/plugins/: CMakeLists.txt
core/plugins/impl/: interpolate_plugin.h  normalize_plugin.h
core/runtime/: BUILD  CMakeLists.txt  CudaDevice.cpp  TRTEngine.cpp  register_trt_op.cpp  runtime.cpp  runtime.h
core/util/: BUILD  CMakeLists.txt  Exception.h
core/util/logging/: BUILD  CMakeLists.txt  TorchTRTLogger.cpp  TorchTRTLogger.h
cpp/: BUILD  CMakeLists.txt
cpp/include/torch_tensorrt/: macros.h  ptq.h
cpp/lib/: BUILD  CMakeLists.txt
cpp/src/: CMakeLists.txt
py/: build_whl.sh  patchelf  setup.py
py/torch_tensorrt/: __init__.py  _win_bootstrap.py
py/torch_tensorrt/csrc/: tensorrt_backend.cpp  tensorrt_backend.h
tools/trtorchexec/: BUILD
